{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 40,
  "lineage": "1076bab0-0090-682c-5c6e-51ab3b05c379",
  "resources": [
    {
      "module": "module.network[\"app03\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interfaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/app03networkinterface01",
            "internal_domain_name_suffix": "fxxckubtjtku3bona5rs0pqfue.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/app03public-ip01",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network/subnets/app03subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "60-45-BD-FC-43-11",
            "name": "app03networkinterface01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/app03Linuxvm01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_public_ip.public_ipaddress",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"app03\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app03network-nsg",
            "location": "uksouth",
            "name": "app03network-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-22",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-80",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"app03\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ipaddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/app03public-ip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.162.165.54",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "app03public-ip01",
            "resource_group_name": "app-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"app03\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network/subnets/app03subnet1",
            "name": "app03subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "app03-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"app03\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network/subnets/app03subnet1",
            "network_security_group_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app03network-nsg",
            "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network/subnets/app03subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"app03\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5025ee2d-4c33-4ed5-85cd-07e32d3e05a4",
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network",
            "location": "uksouth",
            "name": "app03-network",
            "resource_group_name": "app-grp",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network/subnets/app03subnet1",
                "name": "app03subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/app03network-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"test\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interfaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkInterfaces/testnetworkinterface01",
            "internal_domain_name_suffix": "kaaeugbyktfuxhnpus2o5xjsae.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/testpublic-ip01",
                "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network/subnets/testsubnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "7C-1E-52-79-80-0C",
            "name": "testnetworkinterface01",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "app-grp",
            "virtual_machine_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Compute/virtualMachines/testLinuxvm01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_public_ip.public_ipaddress",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"test\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/testnetwork-nsg",
            "location": "uksouth",
            "name": "testnetwork-nsg",
            "resource_group_name": "app-grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-22",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-80",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"test\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ipaddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/publicIPAddresses/testpublic-ip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.167.130.185",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "testpublic-ip01",
            "resource_group_name": "app-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"test\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network/subnets/testsubnet1",
            "name": "testsubnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "app-grp",
            "virtual_network_name": "test-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"test\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network/subnets/testsubnet1",
            "network_security_group_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/testnetwork-nsg",
            "subnet_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network/subnets/testsubnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"test\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "184a0050-5438-4bcb-9daf-a4b8efdd3204",
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network",
            "location": "uksouth",
            "name": "test-network",
            "resource_group_name": "app-grp",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network/subnets/testsubnet1",
                "name": "testsubnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/networkSecurityGroups/testnetwork-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.vnetpeering[\"app03-network\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeringconnection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network/virtualNetworkPeerings/app03-network_to_test-network",
            "name": "app03-network_to_test-network",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network",
            "resource_group_name": "app-grp",
            "use_remote_gateways": false,
            "virtual_network_name": "app03-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_interface.network_interfaces",
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_public_ip.public_ipaddress",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_subnet_network_security_group_association.subnet_nsg",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    },
    {
      "module": "module.vnetpeering[\"test-network\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeringconnection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/test-network/virtualNetworkPeerings/test-network_to_app03-network",
            "name": "test-network_to_app03-network",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/2ab4f266-3113-46c7-9a11-16bcb8ae5659/resourceGroups/app-grp/providers/Microsoft.Network/virtualNetworks/app03-network",
            "resource_group_name": "app-grp",
            "use_remote_gateways": false,
            "virtual_network_name": "test-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_interface.network_interfaces",
            "module.network.azurerm_network_security_group.network_security_group",
            "module.network.azurerm_public_ip.public_ipaddress",
            "module.network.azurerm_subnet.network_subnets",
            "module.network.azurerm_subnet_network_security_group_association.subnet_nsg",
            "module.network.azurerm_virtual_network.virtual_network",
            "module.resourcegroup.azurerm_resource_group.appgrp"
          ]
        }
      ]
    }
  ]
}